<resources>
    <string name="home">Home</string>
    <string name="hi_x">Hi, %1$s</string>
    <string name="good_morning_x">Good morning, %1$s</string>
    <string name="still_awake">Still awake?</string>
    <string name="good_after_noon_x">Good afternoon, %1$s</string>
    <string name="good_evening_x">Good evening, %1$s</string>
    <string name="good_night_x">Good night, %1$s</string>
    <string name="song">Song</string>
    <string name="songs">Songs</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="playlist">Playlist</string>
    <string name="library">Library</string>
    <string name="folders">Folders</string>
    <string name="year">Year</string>
    <string name="lyrics">Lyrics</string>
    <string name="saving_changes">Saving changes</string>
    <string name="label_details">Details</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_file_format">Format</string>
    <string name="label_track_length">Length</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_replay_gain">ReplayGain</string>
    <string name="label_playing_queue">Playing queue</string>
    <string name="updating">Updating…</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="playlist_exists">Playlist %1$s already exists.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b> %1$s </b>]]></string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b> %1$s </b>? This can\u2019t be undone!]]></string>
    <string name="delete_x_playlists"><![CDATA[Delete <b> %1$d </b> playlists?]]></string>
    <string name="delete_song_x"><![CDATA[Delete the song <b> %1$s </b>?]]></string>
    <string name="delete_x_songs"><![CDATA[Delete <b> %1$d </b> songs?]]></string>
    <string name="remove_song_x_from_playlist"><![CDATA[Remove the song <b> %1$s </b> from the playlist?]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[Remove <b>%1$d</b> songs from the playlist?]]></string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="remove_song_from_playlist_title">Remove song from playlist</string>
    <string name="remove_songs_from_playlist_title">Remove songs from playlist</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="save_playlist_title">Save as file</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="select_all_title">Select all</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="black_theme_name">Black (AMOLED)</string>
    <string name="always">Always</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="never">Never</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="past_seven_days">Past 7 days</string>
    <string name="this_month">This month</string>
    <string name="past_three_months">Past 3 months</string>
    <string name="this_year">This year</string>
    <string name="equalizer">Equalizer</string>
    <string name="x_selected">%1$d selected</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The accent theme color.</string>
    <string name="update_image">Update image</string>
    <string name="album_artist">Album artist</string>
    <string name="favorites">Favorites</string>
    <string name="last_added">Last added</string>
    <string name="history">History</string>
    <string name="my_top_tracks">My top tracks</string>
    <string name="remove_cover">Remove cover</string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="pick_from_local_storage">Pick from local storage</string>
    <string name="web_search">Web search</string>
    <string name="cancel_current_timer">Cancel current timer</string>
    <string name="sleep_timer_canceled">Sleep timer canceled.</string>
    <string name="sleep_timer_set">Sleep timer set for %d minutes from now.</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="grid_size_1">1</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>
    <string name="grid_size_5">5</string>
    <string name="grid_size_6">6</string>
    <string name="grid_size_7">7</string>
    <string name="grid_size_8">8</string>
    <string name="saved_playlist_to">Saved playlist to %s.</string>
    <string name="up_next">Up next</string>
    <string name="saved_x_playlists_to_x">Saved %1$d playlists to %2$s.</string>
    <string name="scanned_files">Scanned %1$d of %2$d files.</string>
    <string name="listing_files">Listing files</string>
    <string name="action_sort_order">Sort order</string>
    <string name="sort_order_a_z">Ascending</string>
    <string name="sort_order_z_a">Descending</string>
    <string name="sort_order_artist">Artist</string>
    <string name="sort_order_album">Album</string>
    <string name="sort_order_year">Year</string>
    <string name="sort_order_date_added">Date added</string>
    <string name="finish_current_music_sleep_timer">Finish last song</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="scan_media">Scan media</string>
    <string name="none">None</string>
    <string name="track">Track</string>
    <string name="label_with_rg_info">With ReplayGain Tags :</string>
    <string name="label_without_rg_info">Without ReplayGain Tags :</string>
    <string name="blacklist">Blacklist</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_about">About</string>
    <string name="action_play_next">Play next</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_set">Set</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="pref_header_now_playing_screen">Now playing</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_images">Images</string>
    <string name="pref_header_lockscreen">Lockscreen</string>
    <string name="pref_header_playlists">Playlists</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_header_look_and_feel">Look &amp; Feel</string>
    <string name="pref_title_rg_source_mode">ReplayGain source mode</string>
    <string name="pref_title_volume_controls">Volume controls</string>
    <string name="pref_title_rg_preamp">ReplayGain preamp</string>
    <string name="pref_title_now_playing_screen_appearance">Appearance</string>
    <string name="pref_title_general_theme">General theme</string>
    <string name="pref_title_app_shortcuts">Colored app shortcuts</string>
    <string name="pref_title_album_art_on_lockscreen">Show album cover</string>
    <string name="pref_title_auto_download_metadata">Auto download metadata</string>
    <string name="pref_title_blurred_album_art">Blur album cover</string>
    <string name="pref_title_colored_notification">Colored notification</string>
    <string name="pref_title_classic_notification">Classic notification design</string>
    <string name="pref_title_ignore_media_store_artwork">Ignore Media Store covers</string>
    <string name="pref_title_gapless_playback">Gapless playback</string>
    <string name="pref_title_audio_ducking">Reduce volume on focus loss</string>
    <string name="pref_title_recently_played_interval">Recently played playlist interval</string>
    <string name="pref_title_last_added_interval">Last added playlist interval</string>
    <string name="pref_title_synchronized_lyrics_show">Show synchronized lyrics</string>
    <string name="pref_title_remember_shuffle">Remember shuffle</string>
    <string name="pref_title_expand_from_notification">Open now playing screen</string>
    <string name="library_categories">Library categories</string>
    <string name="pref_summary_rg_preamp">Set preamp when ReplayGain is enabled.</string>
    <string name="pref_summary_look_and_feel">Theme and library.</string>
    <string name="pref_summary_images">Album art, metadata and lockscreen.</string>
    <string name="pref_summary_audio">Playback, shuffle, ReplayGain and equalizer.</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="pref_summary_now_playing">Now playing and notification appearance.</string>
    <string name="pref_summary_album_art_on_lockscreen">Uses the current songs album cover as lockscreen wallpaper.</string>
    <string name="pref_summary_blurred_album_art">Blurs the album cover on the lockscreen. Can cause problems with third party apps and widgets.</string>
    <string name="pref_summary_classic_notification">Use the classic notification design.</string>
    <string name="pref_summary_colored_notification">"Colors the notification in the album cover\u2019s vibrant color."</string>
    <string name="pref_summary_gapless_playback">"Can cause playback issues on some devices."</string>
    <string name="pref_summary_ignore_media_store_artwork">Can increase the album cover quality but causes slower image loading times. Only enable this if you have problems with low resolution artworks.</string>
    <string name="pref_summary_colored_app_shortcuts">Colors the app shortcuts in the primary color.</string>
    <string name="pref_summary_audio_ducking">Notifications, navigation etc.</string>
    <string name="pref_summary_synchronized_lyrics_show">Currently only synchronized lyrics in LRC format are supported. Either embedded or as a separate file.</string>
    <string name="pref_summary_remember_shuffle">Shuffle mode will stay on when selecting a new list of songs.</string>
    <string name="pref_summary_blacklist">The content of blacklisted folders is hidden from your library.</string>
    <string name="pref_summary_other">Smart playlist intervals and blacklist.</string>
    <string name="pref_summary_expand_from_notification">If turned the now playing screen will open when launching the app from notification.</string>
</resources>