<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_current_playing"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_to_artist"
        android:title="@string/action_go_to_artist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tag_editor"
        android:title="@string/action_tag_editor"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_from_device"
        android:title="@string/action_delete_from_device"
        app:showAsAction="never" />


</menu>
