<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/music_chooser">
        <item
            android:id="@+id/action_library"
            android:checkable="true"
            android:icon="@drawable/ic_library_music"
            android:title="@string/library" />
        <item
            android:id="@+id/action_folders"
            android:checkable="true"
            android:icon="@drawable/ic_folder_outline"
            android:title="@string/folders" />
    </group>

    <group
        android:id="@+id/actions_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/action_settings"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />

    </group>

</menu>