<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardElevation="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/action_go_to_album"
                android:scaleType="centerCrop"
                android:src="@drawable/default_album_art" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/action_go_to_album"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Abbey.Item.Title" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/action_go_to_album"
            android:elevation="2dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_album_art" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/action_go_to_artist"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Abbey.Item.Title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/action_go_to_album"
            android:padding="25dp"
            android:src="@drawable/ic_playlist_add" />

        <TextView
            android:id="@+id/quick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/action_add_to_playlist"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Abbey.Item.Title" />


    </LinearLayout>

</LinearLayout>