<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/default_item_margin"
        android:text="@string/action_sleep_timer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/timerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_item_margin"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintEnd_toStartOf="@id/sleepTimerSeekBar"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="43 min" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/sleepTimerSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:splitTrack="false"
        app:layout_constraintBottom_toBottomOf="@id/timerDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/timerDisplay"
        app:layout_constraintTop_toTopOf="@id/timerDisplay"
        tools:progress="43" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setSleepTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/action_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/shouldFinishLastSong" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelSleepTimerButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="?android:textColorSecondary"
        app:cornerRadius="@dimen/corner_radius_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/setSleepTimerButton"
        app:layout_constraintTop_toBottomOf="@id/shouldFinishLastSong"
        app:rippleColor="?colorControlHighlight" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_item_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_item_margin" />

    <com.kabouzeid.appthemehelper.common.views.ATECheckBox
        android:id="@+id/shouldFinishLastSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/finish_current_music_sleep_timer"
        app:layout_constraintBottom_toTopOf="@+id/setSleepTimerButton"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/timerDisplay" />

</androidx.constraintlayout.widget.ConstraintLayout>

